# phonix

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/phonix/: Cargo.toml  README.md
crates/phonix-eval/: Cargo.toml  README.md
crates/phonix-eval/src/: main.rs
crates/phonix-recall/: Cargo.toml  Dockerfile  README.md
crates/phonix-recall/src/: main.rs  recall.rs
crates/phonix/examples/: meeting_adapter.rs
crates/phonix/models/: fetch.sh
crates/phonix/src/: config.rs  detector.rs  engine.rs  error.rs  lib.rs  sink.rs  vad.rs  wake.rs
crates/phonix/src/audio/: mod.rs  resample.rs  ring.rs
crates/phonix/tests/: end_to_end.rs  regression.rs
crates/phonix/tests/fixtures/: README.md
docs/training/: README.md
scripts/eval/: degrade.sh
scripts/k8s/: README.md  deployment.yaml  ingress.yaml  service.yaml
scripts/recall/: README.md  join.sh  leave.sh  status.sh
